--- a/index.html
+++ b/index.html
@@ -32,8 +32,6 @@
                 </li>
             </ul>
         </article>
-
-
     </nav>
     <section class="d-flex mx-4" id="section_1">
         <article class="input-group d-flex max_width_250 border border-rad r ml-3 mr-sm-2">
@@ -122,7 +120,7 @@
         <table id="table1">
             <thead class="px-2">
                 <tr>
-                    <th scope="col" class="pr-4 pl-2 ">
+                    <th scope="col" tabindex="0"  class="pr-4 pl-2">
                         <article class="form-check form-switch p-0 d-flex  ">
                             <input class="form-check-input custom_checkbox_new" type="checkbox" id="switch" name="first" disabled=disabled>
                             <label class="form-check-label" for="flexSwitchCheckDefault">
@@ -132,7 +130,7 @@
                             </label>
                         </article>
                     </th>
-                    <th scope="col">
+                    <th scope="col" tabindex="0">
                         <article class="pr-5 d-flex flex-column pb-4 ">
                             <p class="p-0 m-0">StudentName</p>
                             <div class="dropup">
@@ -141,7 +139,7 @@
                             </div>
                         </article>
                     </th>
-                    <th scope="col">
+                    <th scope="col" tabindex="0">
                         <article class="pl-3 pr-4 d-flex flex-column pb-4 ">
                             <p class="p-0 m-0">Course Name</p>
                             <div class="dropup">
@@ -150,7 +148,7 @@
                             </div>
                         </article>
                     </th>
-                    <th scope="col" class="pr-5 ">
+                    <th scope="col" tabindex="0" class="pr-5">
                         <article class="px-3 d-flex flex-column pb-4 ">
                             <p class="p-0 m-0">Instructor</p>
                             <div class="dropup">
@@ -159,7 +157,7 @@
                             </div>
                         </article>
                     </th>
-                    <th scope="col" class="px-3 ">
+                    <th scope="col" tabindex="0" class="px-3">
                         <article class="px-0 d-flex flex-column pb-4 ">
                             <p class="p-0 m-0">Readiness</p>
                             <div class="dropup">
@@ -167,7 +165,7 @@
                             </div>
                         </article>
                     </th>
-                    <th scope="col">
+                    <th scope="col" tabindex="0">
                         <article class="px-2 d-flex flex-column pb-4 ">
                             <p class="p-0 m-0">Start</p>
                             <small class="label-wrap">Time Passed</small>
@@ -176,7 +174,7 @@
                             </div>
                         </article>
                     </th>
-                    <th scope="col" class="">
+                    <th scope="col" tabindex="0">
                         <article class="px-2 d-flex flex-column pb-4 ">
                             <p class="p-0 m-0">Target</p>
                             <small class="label-wrap">Time Needed</small>
@@ -185,7 +183,7 @@
                             </div>
                         </article>
                     </th>
-                    <th scope="col" class="">
+                    <th scope="col" tabindex="0" >
                         <article class="pl-2 d-flex flex-column pb-4 ">
                             <p class="p-0 m-0">Estimated</p>
                             <small class="label-wrap d-inline-flex">Time Required
@@ -193,7 +191,7 @@
                         </small>
                         </article>
                     </th>
-                    <th scope="col">
+                    <th scope="col" tabindex="0">
                         <article class="px-2 d-flex flex-column pb-4 ">
                             <p class="p-0 m-0">Last Login</p>
                             <small class="label-wrap">Time Passed</small>
@@ -202,20 +200,20 @@
                             </div>
                         </article>
                     </th>
-                    <th scope="col" class="">
+                    <th scope="col" tabindex="0" class="">
                         <article class="pl-1  ">Actions</article>
                     </th>
                 </tr>
             </thead>
             <tbody class="px-2">
                 <tr class="border table-light  py-5 opaque8 text-muted disabled">
-                    <td scope="col" class="border-bottom pb-3 pt-4">
+                    <td scope="col" tabindex="0" class="border-bottom pb-3 pt-4">
                         <article class="ml-1 mt-3 pl-0 form-check form-check-inline">
                             <input type="checkbox" class="form-check-input custom_checkbox_new" id="check_label1" name="check_label1" disabled=disabled>
                             <label class="form-check-label ml-1" for="check_1">1</label>
                         </article>
                     </td>
-                    <td scope="col" class="border-bottom">
+                    <td scope="col" tabindex="0" class="border-bottom">
                         <article class="py-2 d-flex ">
                             <svg height="60" width="60">
                                 <defs>
@@ -228,7 +226,7 @@
                             <p class="text-truncate text-center  w-50 pt-3 pl-1">Abhishek Kumar</p>
                         </article>
                     </td>
-                    <td scope="col" class="border-bottom ">
+                    <td scope="col" tabindex="0" class="border-bottom ">
                         <article class="d-flex flex-column align-center justify-content-center pl-3 ">
                             <p class="mt-1 mb-0">APP-Training</p>
                             <p class="my-0 ">
@@ -240,14 +238,14 @@
                             </p>
                         </article>
                     </td>
-                    <td scope="col" class="border-bottom ">
+                    <td scope="col" tabindex="0" class="border-bottom ">
                         <article class="px-3 pt-3  d-flex flex-column">Dhiroo Verma
                             <span id="New" class="badge bg-primary w-25 text-light">
                               new 
                             </span>
                         </article>
                     </td>
-                    <td scope="col" class=" border-bottom ">
+                    <td scope="col" tabindex="0" class=" border-bottom ">
                         <article class="pl-4 pt-3 d-flex flex-column">
                             <svg height="23" width="23" viewBox="0 0 20 20">
                                 <circle r="10" cx="10" cy="10" fill="#e9ebe5" />
@@ -261,7 +259,7 @@
                             <p class="text-success">58%</p>
                         </article>
                     </td>
-                    <td scope="col" class="border-bottom ">
+                    <td scope="col" tabindex="0" class="border-bottom ">
                         <article class="d-flex flex-column py-3 px-2">
                             24-APR-19
                             <p>
@@ -269,7 +267,7 @@
                             </p>
                         </article>
                     </td>
-                    <td scope="col" class="border-bottom ">
+                    <td scope="col" tabindex="0" class="border-bottom ">
                         <article class="d-flex flex-column py-3 px-2">
                             25-JUN-19
                             <p>
@@ -277,7 +275,7 @@
                             </p>
                         </article>
                     </td>
-                    <td scope="col" class="border-bottom ">
+                    <td scope="col" tabindex="0" class="border-bottom ">
                         <article class="d-flex flex-column py-3 px-2">
                             12-JAN-23
                             <p>
@@ -285,7 +283,7 @@
                             </p>
                         </article>
                     </td>
-                    <td scope="col" class="border-bottom text-danger">
+                    <td scope="col" tabindex="0" class="border-bottom text-danger">
                         <article class="d-flex flex-column py-3 px-2">
                             21-FEB-19
                             <p class="text-dark">
@@ -293,7 +291,7 @@
                             </p>
                         </article>
                     </td>
-                    <td scope="col" class="border-bottom">
+                    <td scope="col" tabindex="0" class="border-bottom">
                         <article class=" py-3 pl-1 ">
                             <button class="btn btn-outline-primary d-inline" aria-label="setting button">
                                 <span class="d-inline-flex">
@@ -305,13 +303,13 @@
                     </td>
                 </tr>
                 <tr class="border table-light  py-5  border-0 disabled">
-                    <td scope="col" class="border border-0 pb-3 pt-4">
+                    <td scope="col" tabindex="0" class="border border-0 pb-3 pt-4">
                         <article class="ml-1 mt-3 pl-0 form-check form-check-inline">
                             <input type="checkbox" class="form-check-input custom_checkbox_new" id="check_label" name="check_label" disabled=disabled>
                             <label class="form-check-label ml-1" for="check_label">2</label>
                         </article>
                     </td>
-                    <td scope="col">
+                    <td scope="col" tabindex="0">
                         <article class="py-2 d-flex pl-2 ">
                             <svg height="40" width="40" viewBox="0 0 20 20">
                               <circle r="10" cx="10" cy="10" fill="green" />
@@ -320,7 +318,7 @@
                             <p class="text-truncate text-center pt-2 pl-2 w-50">Abhishek Pandey</p>
                         </article>
                     </td>
-                    <td scope="col">
+                    <td scope="col" tabindex="0">
                         <article class="d-flex flex-column align-center justify-content-center pl-3 ">
                             <p class="mt-1 mb-0">APP-Training</p>
                             <p class="my-0 ">
@@ -330,14 +328,14 @@
                                 <i class="icomoon-24px-test text-success icomoon-test-44px mr-1"></i></p>
                         </article>
                     </td>
-                    <td scope="col" class="">
+                    <td scope="col" tabindex="0" class="">
                         <article class="px-3 pt-3  d-flex flex-column">Swati Kesarwani
                             <span id="New" class="badge bg-primary w-75 pr-4 text-left text-light">
                             merged Shambhunath Ap</span>
                             </button>
                         </article>
                     </td>
-                    <td scope="col" class=" border-0">
+                    <td scope="col" tabindex="0" class=" border-0">
                         <article class="pl-4 pt-3 d-flex flex-column">
                             <svg height="23" width="23" viewBox="0 0 20 20">
                                 <circle r="10" cx="10" cy="10" fill="#e9ebe5" />
@@ -346,12 +344,12 @@
                                         stroke-width="10"
                                         stroke-dasharray="18.99 38.4"
                                         transform="rotate(-90) translate(-20)"
-                                         />
+                                 />
                               </svg>
                             <p class="text-success">64%</p>
                         </article>
                     </td>
-                    <td scope="col" class="border-0">
+                    <td scope="col" tabindex="0" class="border-0">
                         <article class="d-flex flex-column py-3 px-2">
                             18-FEB-17
                             <p>
@@ -359,7 +357,7 @@
                             </p>
                         </article>
                     </td>
-                    <td scope="col" class=" border-0">
+                    <td scope="col" tabindex="0" class=" border-0">
                         <article class="d-flex flex-column py-3 px-2">
                             18-JUN-17
                             <p>
@@ -367,7 +365,7 @@
                             </p>
                         </article>
                     </td>
-                    <td scope="col" class="border-0">
+                    <td scope="col" tabindex="0" class="border-0">
                         <article class="d-flex flex-column py-3 px-2">
                             03-DEC-23
                             <p>
@@ -375,7 +373,7 @@
                             </p>
                         </article>
                     </td>
-                    <td scope="col" class=" border-0 text-danger">
+                    <td scope="col" tabindex="0" class=" border-0 text-danger">
                         <article class="d-flex flex-column py-3 px-2">
                             14-MAY-17
                             <p class="text-dark">
@@ -383,7 +381,7 @@
                             </p>
                         </article>
                     </td>
-                    <td scope="col">
+                    <td scope="col" tabindex="0">
                         <article class=" py-3 pl-1 ">
                             <button class="btn btn-outline-primary d-inline" name="action" id="action" aria-label="setting button">
                                 <span class="d-inline-flex">
@@ -398,5 +396,4 @@
         </table>
     </section>
 </body>
-
 </html>
