--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                         </article>
                     </td>
                     <td scope="col" tabindex="0" class="border-0">
-                        <article class="d-flex flex-column pt-3 px-2">
+                        <article class="d-flex flex-column pt-3 px-2 text-nowrap">
                             18-FEB-17
                             <p>
                                 <small>4.3 years</small>
