--- a/index.html
+++ b/index.html
@@ -123,11 +123,10 @@
                     <th scope="col" class="pr-4 pl-2">
                         <article class="form-check form-switch p-0 d-flex">
                             <input class="form-check-input custom_checkbox_new" type="checkbox" id="switch" name="switch" tabindex="0" aria-label="select checkbox" disabled>
-                            <span class="form-check-label" for="flexSwitchCheckDefault">
-                                <button type="button" class="btn btn-outline-primary bg-white text-dark p-0 mx-1 mt-sm-n1 pr-lg-1 pl-lg-1"
-                                    data-toggle="dropdown" id="Check" name="Check_btn" aria-label="drop down">
-                                    <small> <i class="icomoon-new-24px-arrow-down-2 s1"></i> </small>
-                                </button>
+                            <span class="bg-white d-flex m-t-xxs border border-info p-sm pt-0 pb-sm-0 rounded" tabindex="0">
+                                <small>
+                                    <i class="icomoon-new-24px-arrow-down-2 font-weight-bold font9"></i></button>
+                                </small>
                             </span>
                         </article>
                     </th>
@@ -253,9 +252,7 @@
                         <article class="pl-4 pt-3 d-flex flex-column">
                             <svg height="23" width="23" viewBox="0 0 20 20">
                                 <circle r="10" cx="10" cy="10" fill="#e9ebe5" />
-                                <circle r="5" cx="10" cy="10" fill="transparent" stroke="green" stroke-width="10"
-                                    stroke-dasharray="17.11 38.4" transform="rotate(-90) translate(-20)"
-                                />
+                                <circle r="5" cx="10" cy="10" fill="transparent" stroke="green" stroke-width="10" stroke-dasharray="17.11 38.4" transform="rotate(-90) translate(-20)"/>
                             </svg>
                             <p class="text-success">58%</p>
                         </article>
