--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     </th>
                     <th scope="col">
                         <article class="pl-3 pr-4 d-flex flex-column pb-1">
-                            <p tabindex="0" aria-label="course name" class="p-0 m-0">Course Name</p>
+                            <p tabindex="0" aria-label="course name" class="p-0 m-0 text-nowrap">Course Name</p>
                             <div tabindex="0" aria-label="course drop up" class="dropup">
                                 <small>CRN/Course Status</small>
                                 <span class="dropdown-toggle dropdown-toggle-split pl-1"></span>
