--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a tabindex="0" role="button" class="nav-link" href="#"><i class="icomoon-my-profile-24px-1 mr-1 text-nowrap" aria-pressed="false"></i>My Profile</a>
             </li>
             <li class="nav-item mr-2 border-bottom border-primary" aria-label="admin">
-                <a tabindex="0" role="button" class="nav-link disabled border border-primary border-right-0 border-top-0 border-left-0" href="#" aria-pressed="false"><i class="icomoon-admin-24px-1 mr-1"></i>Admin</a>
+                <a tabindex="0" role="button" class="nav-link border border-primary border-right-0 border-top-0 border-left-0" href="#" aria-pressed="false"><i class="icomoon-admin-24px-1 mr-1"></i>Admin</a>
             </li>
         </ul>
     </nav>
@@ -112,8 +112,8 @@
         </div>
         <span tabindex="0" aria-label="switch" class="custom-control custom-switch ml-xl-auto mt-2 text-nowrap">
             <span>Test Mode Only</span>
-        <input type="checkbox" class="custom-control-input" id="switch_one" name="switch_one" />
-        <span class="custom-control-label ml-5" for="custom"></span>
+                <input type="checkbox" class="custom-control-input" id="switch_one" name="switch_one"/>
+            <span class="custom-control-label ml-5" for="custom"></span>
         </span>
     </section>
     <section class="mx-5 mt-4">
@@ -190,7 +190,7 @@
                         <article class="pl-2 d-flex flex-column pb-4 ">
                             <p tabindex="0" aria-label="Estimated" class="p-0 m-0">Estimated</p>
                             <small tabindex="0" aria-label="time required" class="label-wrap d-inline-flex text-nowrap">Time Required
-                                <i tabindex="0" aria-label="dropup" class="icomoon-new-24px-arrow-down-2 s1 mt-1 ml-2"></i>
+                                <i class="icomoon-new-24px-arrow-down-2 s1 mt-1 ml-2"></i>
                             </small>
                         </article>
                     </th>
@@ -303,7 +303,7 @@
                 <tr class="border table-light py-5 border-0 disabled">
                     <td scope="col" class="border border-0 pt-4">
                         <article class="ml-1 mt-3 pl-0 form-check form-check-inline">
-                            <input type="checkbox" tabindex="0" aria-label="checkbox" class="form-check-input custom_checkbox_new" id="check_label" name="check_label" disabled>
+                            <input type="checkbox" tabindex="0" aria-label="checkbox" class="form-check-input custom_checkbox_new" id="check_label" name="check_label"/>
                             <span tabindex="0" aria-label="seq 2" class="form-check-label ml-1" for="check_label">2</span>
                         </article>
                     </td>
