--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
 </head>
 
 <body>
-    <nav class="navbar">
-        <ul class="navbar navbar-expand-sm m-l-lg m-r-lg list-unstyled pb-0 pl-1 border-bottom w-100">
+    <nav class="navbar my-2">
+        <ul class="nav nav-pills m-l-lg m-r-lg list-unstyled pb-0 pl-1 border-bottom w-100">
             <li class="nav-item active mr-2" aria-label="library">
-                <a tabindex="0" role="button" class="nav-link" href="#"><i class="icomoon-my-library-24px-1 mr-1 text-nowrap" aria-pressed="false"></i>My Library</a>
+                <a tabindex="0" role="button" class="nav-link" data-toggle="tooltip" title="My Library" href="#"><i class="icomoon-my-library-24px-1 mr-1 text-nowrap" aria-pressed="false"></i><span class="d-lg-inline-block d-none">My Library</span></a>
             </li>
             <li class="nav-item mr-2" aria-label="enroll">
-                <a tabindex="0" role="button" class="nav-link" href="#"><i class="icomoon-24px-save-as-4 mr-1" aria-pressed="false"></i>Enroll</a>
+                <a tabindex="0" role="button" class="nav-link" data-toggle="tooltip" title="Enroll" href="#"><i class="icomoon-24px-save-as-4 mr-1" aria-pressed="false"></i><span class="d-lg-inline-block d-none">Enroll</span></a>
             </li>
             <li class="nav-item mr-2" aria-label="inbox">
-                <a tabindex="0" role="button" class="nav-link" href="#"><i class="icomoon-envelop-3 mr-1" aria-pressed="false"></i>Inbox </a>
+                <a tabindex="0" role="button" class="nav-link" data-toggle="tooltip" title="Inbox" href="#"><i class="icomoon-envelop-3 mr-1" aria-pressed="false"></i><span class="d-lg-inline-block d-none">Inbox</span></a>
             </li>
             <li class="nav-item mr-2" aria-label="my profile">
-                <a tabindex="0" role="button" class="nav-link" href="#"><i class="icomoon-my-profile-24px-1 mr-1 text-nowrap" aria-pressed="false"></i>My Profile</a>
+                <a tabindex="0" role="button" class="nav-link" data-toggle="tooltip" title="My Profile" href="#"><i class="icomoon-my-profile-24px-1 mr-1 text-nowrap" aria-pressed="false"></i><span class="d-lg-inline-block d-none">My Profile</span></a>
             </li>
             <li class="nav-item mr-2 border-bottom border-primary" aria-label="admin">
-                <a tabindex="0" role="button" class="nav-link border border-primary border-right-0 border-top-0 border-left-0" href="#" aria-pressed="false"><i class="icomoon-admin-24px-1 mr-1"></i>Admin</a>
+                <a tabindex="0" role="button" class="nav-link  active" data-toggle="tooltip" title="Admin" href="#" aria-pressed="false"><i class="icomoon-admin-24px-1 mr-1"></i><span class="d-lg-inline-block d-none">Admin</span></a>
             </li>
         </ul>
     </nav>
