--- a/index.html
+++ b/index.html
@@ -42,33 +42,34 @@
             <button type="button" class="btn text-dark btn-outline-primary dt bg-light" name="ros_btn" id="ros_btn" aria-label="roster">
                 <span class="d-inline-flex">
                     <i class="mr-1 icomoon-roster-sm mt-sm-1 s3"></i>
-                    <span>Roster</span>
+                    <span class="d-lg-inline-block d-none">Roster</span>
                 </span>
             </button>
             <button type="button" class="btn btn-outline-primary text-dark text-nowrap" name="man_btn" id="man_btn" aria-label="Manager">
                 <i class="mr-1 icomoon-project-management-44px s3"></i>
-                Manager
+                <span class="d-lg-inline-block d-none">Manager</span>
                 <i class="icomoon-new-24px-arrow-down-2 ml-1 s1"></i>
             </button>
             <button type="button" class="btn btn-outline-primary text-dark" name="report" id="report" aria-label="report">
                 <span class="d-inline-flex">
                     <i class="mr-1 icomoon-reports-sm s3 mt-1"></i>
-                    Report
+                    <span class="d-lg-inline-block d-none">Report</span>
                     <i class="icomoon-new-24px-arrow-down-2 mt-2 ml-sm-2 s1"></i>
                 </span>
             </button>
             <button type="button" class="btn btn-outline-primary text-dark" name="enroll_btn" id="enroll_btn" aria-label="enroll">
                 <span class="d-inline-flex">
                     <i class="mr-1 icomoon-add-license-enroll-sm s3 mt-1"></i>
-                    Enroll
+                    <span class="d-lg-inline-block d-none">Enroll</span>
                 </span>
             </button>
         </article>
         <article class="ml-auto mr-4 text-nowrap">
-            <button type="button" class="btn btn-outline-primary ml-xl-5 py-2" id="fig" name="fig" aria-label="config">LMS Configuration</button>
+            <button type="button" class="btn btn-outline-primary ml-md-5 py-2" id="fig" name="fig" aria-label="config">LMS Configuration</button>
             <button type="button" class="btn btn-outline-primary text-center text-dark mx-auto" id="Expt" name="Expt" aria-label="export">
                 <span class="d-inline-flex">
-                    <i class="icomoon-folder-download-2 mr-2 s3"></i>Export
+                    <i class="icomoon-folder-download-2 mr-2 s3"></i>
+                    <span class="d-lg-inline-block d-none">Export</span>
                     <i class="icomoon-new-24px-arrow-down-2 mt-2 ml-sm-2 s1"></i>
                 </span>
             </button>
@@ -82,36 +83,36 @@
             <button type="button" class="btn btn-outline-primary text-dark bg-light px-2" id="roster_btn" name="roster_btn" aria-label="roster">
                 <span class="d-inline-flex">
                     <i class="mr-1  icomoon-roster-sm mt-sm-1 s3"></i>
-                    <span>Roster</span>
+                    <span class="d-lg-inline-block d-none">Roster</span>
                 </span>
             </button>
             <button type="button" class="btn btn-outline-primary text-dark px-2" id="lesson" name="lesson" aria-label="lesson">
                 <span class="d-inline-flex">
                     <i class="icomoon-lesson-sm mr-2 mt-1 s3"></i>
-                    Lessons
+                    <span class="d-lg-inline-block d-none">Lessons</span>
                 </span>
             </button>
             <button type="button" class="btn btn-outline-primary text-dark px-2 text-nowrap" id="practice" name="practice" aria-label="practice">
                 <i class="icomoon-testprep-or-practice-test mr-1 s3"></i>
-                Practice
+                <span class="d-lg-inline-block d-none">Practice</span>
             </button>
             <button type="button" class="btn btn-outline-primary text-dark px-2" id="engine" name="engine" aria-label="prep">
                 <div class="d-inline-flex h">
                     <i class=" icomoon-cogs mr-1 mt-sm-1 s3 font-weight-bold"></i>
-                    <span class="pr-2">Prepengine</span>
+                    <span class="pr-2 d-lg-inline-block d-none">Prepengine</span>
                     <i class="icomoon-new-24px-arrow-down-2 s1 pt-2"></i>
                 </div>
             </button>
             <button type="button" class="btn btn-outline-primary text-dark px-2" id="analytic" aria-label="analytic" name="analytic">
                 <span class="d-inline-flex">
                     <i class="icomoon-bars mr-sm-2 mt-sm-1 s3"></i>
-                    Analytics
+                    <span class="d-lg-inline-block d-none">Analytics</span>
                     <i class="icomoon-new-24px-arrow-down-2 s1 pt-2 ml-2"></i>
                 </span>
             </button>
         </div>
         <span tabindex="0" aria-label="switch" class="custom-control custom-switch ml-xl-auto mt-2 text-nowrap">
-            <label for="switch">Test Mode Only</label>
+            <label for="switch d-lg-inline-block d-none">Test Mode Only</label>
             <input type="checkbox" class="custom-control-input" id="switch_one" name="switch_one"/>
             <span class="custom-control-label ml-5" for="custom"></span>
         </span>
