--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </button>
         </article>
         <article class="ml-auto mr-4 text-nowrap">
-            <button type="button" class="btn btn-outline-primary ml-md-5 py-2" id="fig" name="fig" aria-label="config">LMS Configuration</button>
+            <button type="button" class="btn btn-outline-primary ml-xl-5 py-2" id="fig" name="fig" aria-label="config">LMS Configuration</button>
             <button type="button" class="btn btn-outline-primary text-center text-dark mx-auto" id="Expt" name="Expt" aria-label="export">
                 <span class="d-inline-flex">
                     <i class="icomoon-folder-download-2 mr-2 s3"></i>
